--- a/whatsapp with fire-base/index.html
+++ b/whatsapp with fire-base/index.html
@@ -71,7 +71,7 @@
                                 <label>Password</label>
                             </div>
                             <div class="user-box">
-                                <input type="file" name="" required id="profile" class="file">
+                                <input type="file"  required id="profile" class="file">
                             </div>
                             <a class="submithover" href="#" type="submit" id="signupbtn">
                                 <span></span>
