--- a/responsive whatsapp/whatsapp with fire-base/index.html
+++ b/responsive whatsapp/whatsapp with fire-base/index.html
@@ -23,7 +23,7 @@
     <div class="main">
         <div class="container">
             <div class="row justify-content-around">
-                <div class="col-md-6 mx-1 bg-primary  text-center">
+                <div class="col-md-6 px-1 text-center">
                     <div class="login-box" id="login">
                         <h2>Login</h2>
                         <form>
