--- a/responsive whatsapp/whatsapp with fire-base/profileSec/dashboard.html
+++ b/responsive whatsapp/whatsapp with fire-base/profileSec/dashboard.html
@@ -72,14 +72,19 @@
                                                         d="M19.005,3.175H4.674C3.642,3.175,3,3.789,3,4.821V21.02 l3.544-3.514h12.461c1.033,0,2.064-1.06,2.064-2.093V4.821C21.068,3.789,20.037,3.175,19.005,3.175z M14.016,13.044H7.041V11.1 h6.975V13.044z M17.016,9.044H7.041V7.1h9.975V9.044z"
                                                         style="color: #667781"></path>
                                                 </svg> -->
-                                                <svg viewBox="0 0 24 24" height="24" width="24"
+                                                <svg onclick="button_logout()" viewBox="0 0 24 24" height="24" width="24 "
                                                     preserveAspectRatio="xMidYMid meet" class="mx-2" version="1.1"
                                                     x="0px" y="0px" enable-background="new 0 0 24 24"
                                                     xml:space="preserve">
                                                     <path fill="currentColor"
                                                         d="M12,7c1.104,0,2-0.896,2-2c0-1.105-0.895-2-2-2c-1.104,0-2,0.894-2,2 C10,6.105,10.895,7,12,7z M12,9c-1.104,0-2,0.894-2,2c0,1.104,0.895,2,2,2c1.104,0,2-0.896,2-2C13.999,9.895,13.104,9,12,9z M12,15 c-1.104,0-2,0.894-2,2c0,1.104,0.895,2,2,2c1.104,0,2-0.896,2-2C13.999,15.894,13.104,15,12,15z"
-                                                        style="color: #667781"></path>
+                                                        style="color: #667781;cursor:pointer !important;"></path>
                                                 </svg>
+                                                <div class="logout_wrapper-res">
+                                                    <ul>
+                                                        <li class="signtout-res">Logout</li>
+                                                    </ul>
+                                                </div>
 
                                             </div>
                                         </div>
@@ -164,7 +169,7 @@
             </div>
             <!-- right chat portion  -->
             <!-- right portion on  initial  -->
-            <div class="col-lg-8 col-md-12 col-sm-12 chat-initial">
+            <div class="col-lg-8 col-md-8 col-sm-12 chat-initial">
                 <div class="chat-initial-inner">
                     <svg viewBox="0 0 303 172" width="360" preserveAspectRatio="xMidYMid meet" class="svgicon"
                         fill="none">
@@ -233,7 +238,7 @@
                 </div>
             </div>
 
-            <div class="col-lg-8 col-md-12 col-sm-12  p-0 chat-click">
+            <div class="col-lg-8 col-md-8  col-sm-12  p-0 chat-click">
                 <header class="">
                     <div class="chat-header">
                         <nav class="navbar navbar-light p-0 ">
@@ -260,7 +265,7 @@
                                             d="M19.005,3.175H4.674C3.642,3.175,3,3.789,3,4.821V21.02 l3.544-3.514h12.461c1.033,0,2.064-1.06,2.064-2.093V4.821C21.068,3.789,20.037,3.175,19.005,3.175z M14.016,13.044H7.041V11.1 h6.975V13.044z M17.016,9.044H7.041V7.1h9.975V9.044z"
                                             style="color: #667781"></path>
                                     </svg>
-                                    <svg viewBox="0 0 24 24" height="24" width="24" preserveAspectRatio="xMidYMid meet"
+                                    <svg onclick="deleteChat()" viewBox="0 0 24 24" height="24" width="24" preserveAspectRatio="xMidYMid meet"
                                         class="mx-2" version="1.1" x="0px" y="0px" enable-background="new 0 0 24 24"
                                         xml:space="preserve">
                                         <path fill="currentColor"
